--- a/backend/package.json
+++ b/backend/package.json
@@ -2,10 +2,11 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
-    "start": "node dist/server.js",
-    "dev": "nodemon src/server.ts",
+    "start": "nodemon src/server.js",
+    "dev": "nodemon src/server.js",
     "build": "tsc"
   },
   "keywords": [],
@@ -21,5 +22,12 @@
     "knex": "^3.1.0",
     "nodemon": "^3.1.7",
     "pg": "^8.13.0"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/knex": "^0.16.1",
+    "@types/node": "^22.7.4"
   }
 }
