--- a/backend/package.json
+++ b/backend/package.json
@@ -2,12 +2,11 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
-  "type": "module",
+  "main": "app.ts",
   "scripts": {
-    "start": "nodemon src/server.js",
-    "dev": "nodemon src/server.js",
-    "build": "tsc"
+    "build": "tsc",
+    "start": "npm run build && node dist/app.js",
+    "dev": "nodemon --watch 'src/**/*.ts' --exec 'npm run build && node dist/app.js'"
   },
   "keywords": [],
   "author": "",
@@ -25,11 +24,13 @@
     "pg": "^8.13.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/knex": "^0.16.1",
-    "@types/node": "^22.7.4"
+    "@types/node": "^22.7.4",
+    "ts-node": "^10.9.2"
   }
 }
