--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,8 @@
   "main": "app.ts",
   "scripts": {
     "build": "tsc",
-    "start": "npm run build && node dist/app.ts",
-    "dev": "nodemon --watch 'src/**/*.ts' --exec 'npm run build && node dist/app.ts'"
+    "start": "npm run build && node dist/app.js",
+    "dev": "nodemon --watch 'src/**/*.ts' --exec 'npm run build && node dist/app.js'"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +14,6 @@
   "dependencies": {
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
-    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
@@ -27,7 +26,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.0",
+    "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/knex": "^0.16.1",
     "@types/node": "^22.7.4",
