--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "npm run build && node dist/app.js",
-    "dev": "nodemon --watch 'src/**/*.ts' --exec 'npm run build && node dist/app.js'"
+    "dev": "nodemon --watch src/**/*.ts --exec npm run build && node dist/app.js"
   },
   "keywords": [],
   "author": "",
